Add an integration test to fix and test the flow from events to notifications.